# projeto_ecoviagens

./: .gitignore  README.md  pyproject.toml
notebooks/: entendimento_dados.ipynb
sql_scrips/: perguntas_negocio.sql  validacao_bi.sql
src/: parameters.py  pipeline.py
